chore: API product category CRUD
